styles/site.css
/* module-key = 'com.atlassian.auiplugin:aui-reset', location = 'src/less/aui-reset.less' */
html,
p,
div,
h1,
h2,
h3,
h4,
h5,
h6,
img,
pre,
form,
fieldset {
    margin: 0;
    padding: 0
}

body {
    margin-top: 10px;
    margin-right: 30px;
    margin-bottom: 50px;
    margin-left: 30px;
}

ul,
ol,
dl {
    margin: 0
}

img,
fieldset {
    border: 0
}

@-moz-document url-prefix() {
    img {
        font-size: 0
    }

    img:-moz-broken {
        font-size: inherit
    }
}

details,
main,
summary {
    display: block
}

audio,
canvas,
progress,
video {
    display: inline-block;
    vertical-align: baseline
}

audio:not([controls]) {
    display: none;
    height: 0
}

[hidden],
template {
    display: none
}

input[type="button"],
input[type="submit"],
input[type="reset"] {
    -webkit-appearance: button
}

/* module-key = 'com.atlassian.auiplugin:aui-page-typography', location = 'src/less/aui-page-typography.less' */
body {
    color: #333;
    font-family: Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857142857143
}

[lang|=en] {
    font-family: Arial, sans-serif
}

[lang|=ja] {
    font-family: "Hiragino Kaku Gothic Pro", "ãƒ’ãƒ©ã‚®ãƒŽè§’ã‚´ Pro W3", "ãƒ¡ã‚¤ãƒªã‚ª", Meiryo, "ï¼­ï¼³ ï¼°ã‚´ã‚·ãƒƒã‚¯", Verdana, Arial, sans-serif
}

p,
ul,
ol,
dl,
h1,
h2,
h3,
h4,
h5,
h6,
blockquote,
pre,
form.aui,
table.aui,
.aui-tabs,
.aui-panel,
.aui-group {
    margin: 10px 0 0 0
}

p:first-child,
ul:first-child,
ol:first-child,
dl:first-child,
h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child,
blockquote:first-child,
pre:first-child,
form.aui:first-child,
table.aui:first-child,
.aui-tabs:first-child,
.aui-panel:first-child,
.aui-group:first-child {
    margin-top: 0
}

h1,
.aui-page-header-hero .aui-page-header-main h1,
.aui-page-header-hero .aui-page-header-main h2,
.aui-page-header-marketing .aui-page-header-main h1,
.aui-page-header-marketing .aui-page-header-main h2 {
    color: #333;
    font-size: 24px;
    font-weight: normal;
    line-height: 1.25;
    text-transform: none;
    margin: 30px 0 0 0
}

h2 {
    color: #333;
    font-size: 22px;
    font-weight: normal;
    line-height: 1.25;
    text-transform: none;
    margin: 30px 0 0 0
}

h3,
.aui-page-header-hero .aui-page-header-main p,
.aui-page-header-marketing .aui-page-header-main p {
    color: #333;
    font-size: 20px;
    font-weight: normal;
    line-height: 1.5;
    text-transform: none;
    margin: 30px 0 0 0
}

h4 {
    color: #333;
    font-size: 16px;
    font-weight: bold;
    line-height: 1.25;
    text-transform: none;
    margin: 20px 0 0 0
}

h5 {
    color: #333;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.42857143;
    text-transform: none;
    margin: 20px 0 0 0
}

h6 {
    color: #707070;
    font-size: 12px;
    font-weight: bold;
    line-height: 1.66666667;
    text-transform: uppercase;
    margin: 20px 0 0 0
}

h1:first-child,
h2:first-child,
h3:first-child,
h4:first-child,
h5:first-child,
h6:first-child {
    margin-top: 0
}

h1+h2,
h2+h3,
h3+h4,
h4+h5,
h5+h6 {
    margin-top: 10px
}

.aui-group>.aui-item>h1:first-child,
.aui-group>.aui-item>h2:first-child,
.aui-group>.aui-item>h3:first-child,
.aui-group>.aui-item>h4:first-child,
.aui-group>.aui-item>h5:first-child,
.aui-group>.aui-item>h6:first-child {
    margin-top: 20px
}

.aui-group:first-child>.aui-item>h1:first-child,
.aui-group:first-child>.aui-item>h2:first-child,
.aui-group:first-child>.aui-item>h3:first-child,
.aui-group:first-child>.aui-item>h4:first-child,
.aui-group:first-child>.aui-item>h5:first-child,
.aui-group:first-child>.aui-item>h6:first-child {
    margin-top: 0
}

small {
    color: #707070;
    font-size: 12px;
    line-height: 1.33333333333333
}

code,
kbd {
    font-family: monospace
}

var,
address,
dfn,
cite {
    font-style: italic
}

cite:before {
    content: "\2014 \2009"
}

blockquote {
    border-left: 1px solid #ccc;
    color: #707070;
    margin-left: 19px;
    padding: 10px 20px
}

blockquote>cite {
    display: block;
    margin-top: 10px
}

q {
    color: #707070
}

q:before {
    content: open-quote
}

q:after {
    content: close-quote
}

abbr {
    border-bottom: 1px #707070 dotted;
    cursor: help
}

/* module-key = 'com.atlassian.auiplugin:aui-avatars', location = 'src/less/aui-avatars.less' */
.aui-avatar {
    box-sizing: border-box;
    display: inline-block;
    vertical-align: text-bottom
}

.aui-avatar-inner {
    display: table-cell;
    vertical-align: middle
}

.aui-avatar img {
    border-radius: 3px;
    display: block;
    margin: 0 auto;
    height: 100%;
    width: 100%
}

.aui-avatar-xsmall,
.aui-avatar-xsmall .aui-avatar-inner {
    height: 16px;
    width: 16px
}

.aui-avatar-small,
.aui-avatar-small .aui-avatar-inner {
    height: 24px;
    width: 24px
}

.aui-avatar-medium,
.aui-avatar-medium .aui-avatar-inner {
    height: 32px;
    width: 32px
}

.aui-avatar-large,
.aui-avatar-large .aui-avatar-inner {
    height: 48px;
    width: 48px
}

.aui-avatar-xlarge,
.aui-avatar-xlarge .aui-avatar-inner {
    height: 64px;
    width: 64px
}

.aui-avatar-xxlarge,
.aui-avatar-xxlarge .aui-avatar-inner {
    height: 96px;
    width: 96px
}

.aui-avatar-xxxlarge,
.aui-avatar-xxxlarge .aui-avatar-inner {
    height: 128px;
    width: 128px
}

.aui-avatar-xsmall .aui-avatar-inner img {
    max-height: 16px;
    max-width: 16px
}

.aui-avatar-small .aui-avatar-inner img {
    max-height: 24px;
    max-width: 24px
}

.aui-avatar-medium .aui-avatar-inner img {
    max-height: 32px;
    max-width: 32px
}

.aui-avatar-large .aui-avatar-inner img {
    max-height: 48px;
    max-width: 48px
}

.aui-avatar-xlarge .aui-avatar-inner img {
    max-height: 64px;
    max-width: 64px
}

.aui-avatar-xxlarge .aui-avatar-inner img {
    max-height: 96px;
    max-width: 96px
}

.aui-avatar-xxxlarge .aui-avatar-inner img {
    max-height: 128px;
    max-width: 128px
}

.aui-avatar-xxlarge img,
.aui-avatar-xxxlarge img {
    border-radius: 5px
}
/* ... */

